plugins {
    id 'java'
    id 'org.springframework.boot' version '2.7.10'
    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
    id 'org.springframework.boot' version '3.0.5'
    id 'io.spring.dependency-management' version '1.1.0'
    id 'org.springdoc.openapi-gradle-plugin' version '1.6.0'
    id 'checkstyle'

}
apply plugin: 'idea'

group = 'by.beatdev'
version = '0.1'
sourceCompatibility = '1.8'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

ext {
    set('testcontainersVersion', "1.17.6")
}

dependencies {

    implementation(
            'org.springframework.boot:spring-boot-starter-data-jpa',
            'org.springframework.boot:spring-boot-starter-security',
            'org.springframework.boot:spring-boot-starter-web',
            'org.springframework.boot:spring-boot-starter-validation',
            'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0',
            'org.flywaydb:flyway-core',
            'org.flywaydb:flyway-mysql',
            'org.mapstruct:mapstruct:1.5.3.Final'
            'io.swagger.core.v3:swagger-annotations:2.2.8'
    )

    annotationProcessor(
            'org.mapstruct:mapstruct-processor:1.5.3.Final',
            'org.projectlombok:lombok-mapstruct-binding:0.2.0',
            'org.projectlombok:lombok'
    )

    compileOnly 'org.projectlombok:lombok'

    runtimeOnly 'com.mysql:mysql-connector-j'

    testImplementation(
            'org.springframework.boot:spring-boot-starter-test',
            'org.testcontainers:junit-jupiter',
            'org.testcontainers:mysql')
}

dependencyManagement {
    imports {
        mavenBom "org.testcontainers:testcontainers-bom:${testcontainersVersion}"
    }
}

compileJava {
    options.compilerArgs = [
            '-Amapstruct.defaultComponentModel=spring'
    ]
}

tasks.named('test') {
    useJUnitPlatform()
}
